--- a/package.json
+++ b/package.json
@@ -5,22 +5,32 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.1.2",
+    "@vue/cli": "^3.12.1",
+    "core-js": "^3.3.2",
     "firebase": "^7.2.1",
     "firebaseui": "^4.2.0",
+    "flush-promises": "^1.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@vue/babel-preset-app": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
+    "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jest-fetch-mock": "^2.1.2",
     "vue-template-compiler": "^2.6.10",
+    "webpac": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   },
